--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -461,7 +461,7 @@ header .navbar ul li a:hover {
 /* skills section starts */
 .skills {
   min-height: 90vh;
-  background: linear-gradient(to bottom, #57059e, #4a00e0);
+  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
 }
 .skills h2 {
   color: #fff;
